--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.1",
+    "sfmediastream": "^1.1.0",
     "socket.io": "^2.3.0",
     "xlsx": "^0.15.1"
   },
