--- a/package.json
+++ b/package.json
@@ -1,46 +1,47 @@
 {
-  "name": "modelo",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
-    "file-saver": "^2.0.2",
-    "jquery": "^3.4.1",
-    "popper.js": "^1.15.0",
-    "react": "^16.9.0",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^5.1.1",
-    "react-scripts": "3.1.1",
-    "socket.io": "^2.3.0",
-    "xlsx": "^0.15.1"
-  },
-  "scripts": {
-    "start": "concurrently 'npm run react' 'npm run server'",
-    "react": "react-scripts start",
-    "server": "nodemon src/server/index.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "concurrently": "^5.0.0",
-    "nodemon": "^1.19.4"
-  }
+    "name": "modelo",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "blockly": "^3.20191014.1",
+        "axios": "^0.19.0",
+        "bootstrap": "^4.3.1",
+        "file-saver": "^2.0.2",
+        "jquery": "^3.4.1",
+        "popper.js": "^1.15.0",
+        "react": "^16.9.0",
+        "react-bootstrap": "^1.0.0-beta.14",
+        "react-dom": "^16.9.0",
+        "react-router-dom": "^5.1.1",
+        "react-scripts": "3.1.1",
+        "socket.io": "^2.3.0",
+        "xlsx": "^0.15.1"
+    },
+    "scripts": {
+        "start": "concurrently 'npm run react' 'npm run server'",
+        "react": "react-scripts start",
+        "server": "nodemon src/server/index.js",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "concurrently": "^5.0.0",
+        "nodemon": "^1.19.4"
+    }
 }
