--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "file-saver": "^2.0.2",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "popper.js": "^1.15.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
