--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "file-saver": "^2.0.2",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
+    "node-sass": "^4.13.0",
     "popper.js": "^1.15.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.1",
+    "reactstrap": "^8.2.0",
     "sfmediastream": "^1.1.0",
     "socket.io": "^2.3.0",
     "xlsx": "^0.15.1"
