--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "xlsx": "^0.15.1"
   },
   "scripts": {
-    "start": "concurrently 'npm run react' 'npm run server'",
-    "react": "react-scripts start",
-    "server": "nodemon src/server/index.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
