--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "file-saver": "^2.0.2",
     "firebase": "^7.6.1",
     "jquery": "^3.4.1",
+    "node-sass": "^4.13.0",
     "popper.js": "^1.15.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
@@ -16,6 +17,7 @@
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.1",
     "react-with-firebase-auth": "^1.2.0",
+    "reactstrap": "^8.2.0",
     "sfmediastream": "^1.1.0",
     "socket.io": "^2.3.0",
     "xlsx": "^0.15.1"
