--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aes-js": "^3.1.2",
     "axios": "^0.19.0",
     "file-saver": "^2.0.2",
     "firebase": "^7.6.1",
