--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.1",
+    "react-toastify": "^5.5.0",
     "react-with-firebase-auth": "^1.2.0",
     "reactstrap": "^8.2.0",
     "sfmediastream": "^1.1.0",
