--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.9.0",
     "react-loading": "^2.0.3",
+    "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.1",
     "react-toastify": "^5.5.0",
