--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "aes-js": "^3.1.2",
     "axios": "^0.19.0",
     "file-saver": "^2.0.2",
-    "firebase": "^7.6.1",
+    "firebase": "^7.7.0",
+    "forever": "^2.0.0",
     "jquery": "^3.4.1",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "popper.js": "^1.15.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
@@ -20,12 +21,13 @@
     "react-toastify": "^5.5.0",
     "react-with-firebase-auth": "^1.2.0",
     "reactstrap": "^8.2.0",
+    "serve": "^11.3.0",
     "sfmediastream": "^1.1.0",
     "socket.io": "^2.3.0",
     "xlsx": "^0.15.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=80  react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
