--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "file-saver": "^2.0.2",
     "firebase": "^7.6.1",
     "jquery": "^3.4.1",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "popper.js": "^1.15.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
@@ -16,7 +16,7 @@
     "react-loading": "^2.0.3",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.1",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.3.0",
     "react-toastify": "^5.5.0",
     "react-with-firebase-auth": "^1.2.0",
     "reactstrap": "^8.2.0",
