--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "blockly": "^3.20191014.1",
+    "react-datepicker": "^2.10.1",
     "aes-js": "^3.1.2",
     "axios": "^0.19.0",
     "file-saver": "^2.0.2",
