--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "xlsx": "^0.15.1"
   },
   "scripts": {
-    "start": "PORT=80  react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
