--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "react-scripts": "^3.3.1",
     "react-toastify": "^5.5.0",
     "react-with-firebase-auth": "^1.2.0",
-    "reactstrap": "^8.2.0",
     "serve": "^11.3.0",
     "sfmediastream": "^1.1.0",
     "socket.io": "^2.3.0",
+    "vendor": "^1.7.0",
     "xlsx": "^0.15.1"
   },
   "scripts": {
