--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "aes-js": "^3.1.2",
     "axios": "^0.19.0",
+    "babel-runtime": "^6.26.0",
     "file-saver": "^2.0.2",
     "firebase": "^7.7.0",
     "forever": "^2.0.0",
     "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
-    "popper.js": "^1.15.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.9.0",
     "react-loading": "^2.0.3",
+    "react-p5": "^1.3.2",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.1",
     "react-scripts": "^3.3.1",
@@ -48,7 +48,6 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^5.0.0",
     "nodemon": "^1.19.4"
   }
 }
