--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "blockly": "^3.20191014.1",
-    "react-datepicker": "^2.10.1",
     "aes-js": "^3.1.2",
     "axios": "^0.19.0",
+    "blockly": "^3.20191014.1",
     "file-saver": "^2.0.2",
     "firebase": "^7.7.0",
     "forever": "^2.0.0",
@@ -15,8 +14,10 @@
     "popper.js": "^1.15.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-datepicker": "^2.13.0",
     "react-dom": "^16.9.0",
     "react-loading": "^2.0.3",
+    "react-modal": "^3.11.2",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.1",
     "react-scripts": "^3.3.1",
