--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-chat-window": "^1.2.1",
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.9.0",
     "react-loading": "^2.0.3",
