--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.7",
     "axios": "^0.19.0",
     "babel-runtime": "^6.26.0",
     "blockly": "^3.20191014.1",
