--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.0",
     "babel-runtime": "^6.26.0",
     "blockly": "^3.20191014.1",
