--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.7",
     "aes-js": "^3.1.2",
     "axios": "^0.19.0",
     "blockly": "^3.20191014.1",
@@ -10,6 +11,7 @@
     "firebase": "^7.7.0",
     "forever": "^2.0.0",
     "jquery": "^3.4.1",
+    "material-ui": "^0.20.2",
     "node-sass": "^4.13.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
@@ -21,6 +23,7 @@
     "react-dropzone-component": "^3.2.0",
     "react-loading": "^2.0.3",
     "react-modal": "^3.11.2",
+    "react-p5": "^1.3.2",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.1",
     "react-scripts": "^3.3.1",
