--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "firebase": "^7.7.0",
     "forever": "^2.0.0",
     "jquery": "^3.4.1",
-    "material-ui": "^0.20.2",
+    "material-ui": "^1.0.0-beta.47",
     "node-sass": "^4.13.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
